CMake and config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,10 @@ project(LeafSQL)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(LeafSQL main.cpp)
+add_executable(LeafSQL main.cpp
+        QueryParser/QueryParser.cpp
+        QueryParser/QueryParser.h
+        Token.h
+        Lexer/Lexer.cpp
+        Lexer/Lexer.h
+)
