Updated QueryParser with parseLogic for SELECT and FROM statements with it's identifiers. Added print method.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,6 @@ add_executable(LeafSQL main.cpp
         Token.h
         Lexer/Lexer.cpp
         Lexer/Lexer.h
+        SelectFromStatement.cpp
+        SelectFromStatement.h
 )
