--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ add_executable(LeafSQL main.cpp
         Token.h
         Lexer/Lexer.cpp
         Lexer/Lexer.h
-        SelectFromStatement.cpp
-        SelectFromStatement.h
+        SelectFromStatement/SelectFromStatement.cpp
+        SelectFromStatement/SelectFromStatement.h
 )
