Updated QueryParser with Token changes and added placeholder methods for each query type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,15 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(LeafSQL main.cpp
         QueryParser/QueryParser.cpp
         QueryParser/QueryParser.h
-        Token.h
         Lexer/Lexer.cpp
         Lexer/Lexer.h
         SelectFromStatement/SelectFromStatement.cpp
         SelectFromStatement/SelectFromStatement.h
         QueryExecutor/QueryExecutor.cpp
         QueryExecutor/QueryExecutor.h
+        Token/Token.h
+        Token/Types/TokenType.h
+        Token/Types/KeywordType.h
+        Token/KeywordToken/KeywordToken.cpp
+        Token/KeywordToken/KeywordToken.h
 )
