Added CreateStatement, Updated KeywordType to include Create and added placeholder function to QueryParser

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,6 @@ add_executable(LeafSQL main.cpp
         Statements/UpdateStatement/UpdateStatement.h
         Statements/DeleteFromStatement/DeleteFromStatement.cpp
         Statements/DeleteFromStatement/DeleteFromStatement.h
+        Statements/CreateStatement/CreateStatement.cpp
+        Statements/CreateStatement/CreateStatement.h
 )
