Updated QueryExecutor with new file restructure and code formatting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,4 +31,6 @@ add_executable(LeafSQL main.cpp
         QueryValidator/DataType/DataType.h
         QueryValidator/QueryValidator.cpp
         QueryValidator/QueryValidator.h
+        QueryPreparer/QueryPreparer.cpp
+        QueryPreparer/QueryPreparer.h
 )
